--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -96,3 +96,22 @@ footer {
     }
   }
 }
+
+
+/* dynamic page*/
+.small-title{
+  font-size: 2.4em;
+  font-weight: 500;
+}
+
+.divider{
+  height: 15px;
+  background-color: black;
+}
+
+.verse-container{
+  min-height: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
