--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
     <small>
-        The <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-        by <a href="https://www.michaelhartl.com/">Michael Hartl</a>
+        The <%= link_to  "Evently App", root_path %>
+        by a CSC 324 student.
     </small>
     <nav>
         <ul>
