--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,6 +9,8 @@
     <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
 </div>
 
-<%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
+<div style="text-align: center; padding-top:20px">
+    <p><small>Powered by</small></p>
+    <%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
                       "https://rubyonrails.org/" %>
-<%#= image_tag("kitten.jpg", alt: "Some cat")%>
+</div>
