Finish layout and routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
 
     <p> This is the home page for Evently, an app made using the <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>. Enjoy!</p>
 
-    <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
 <div style="text-align: center; padding-top:20px">
