--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,14 @@
 </head>
 
 <body>
-    <%= render 'layouts/header' %>
+    <%= render 'layouts/navbar' %>
     <div class="container">
         <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
         <% end %>
-        <%= yield %>
+        <div class="site-wrapper">
+            <%= yield %>
+        </div>
         <%= render 'layouts/footer' %>
         <%= debug(params) if Rails.env.development? %>
     </div>
