--- a/app/views/static_pages/dynamic.html.erb
+++ b/app/views/static_pages/dynamic.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, "Random Verse")%>
-<h1 class="small-title">Bible Verse Generator</h1>
+<h1 >Bible Verse Generator</h1>
 <div class="divider"></div>
 
 <div class="verse-container">
     <%random_verse = get_random_verse%>
-    <h1 class="verse"><%= random_verse[:content]%></h1>
-    <h2 class="location"><%= random_verse[:location]%></h2>
+    <h2 class="verse"><%= random_verse[:content]%></h2>
+    <h3 class="location"><%= random_verse[:location]%></h3>
 </div>
 <div class="divider"></div>
