--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,16 +1,29 @@
-<div class="center jumbotron">
-    <h1>Welcome to the Evently App</h1>
-    <h2>
-        Create events, invite others and discover new events!
-    </h2>
+<div class="center hero-section">
+    <%= image_tag  "evently_white_black.svg", :class => "hero-img"%>
+    <h2 class="tagline"> Create, Invite, Discover </h2>
 
-    <p> This is the home page for Evently, an app made using the <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>. Enjoy!</p>
+    <div class="hero-buttons">
+        <%= link_to "Sign Up", signup_path, :class => "cta" %>
+        <%= link_to "Browse Events", events_path, :class => "cta" %>
+    </div>
+    
 
-    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+<div class="home-section">
+    <h2>What is Evently?</h2>
+    <p>Evently is a platform that allow individuals, colleges, and companies to easily create and share events with their respective communities.
+    <br/> <br/> While Evently is still under development, the end-goal is for this to be a single platform and single source of truth for all events in your multiple calendars.</p>
 </div>
 
-<div style="text-align: center; padding-top:20px">
-    <p><small>Powered by</small></p>
-    <%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
-                      "https://rubyonrails.org/" %>
+<div class="home-section">
+<h2>How do I use Evently?</h2>
+    <p>Simply sign up, create an event and share the link to your event with whomever you wish. Using the link, your attendees can easily download an iCal for your event and have it stored in their personal calendar.</p>
 </div>
+
+
+<div class="home-section">
+<h2>Want to Explore?</h2>
+    <p>Take a look at all public or organizational events that are available for you to attend. Click <%= link_to  "Browse Events", events_path %> to see all events happening around you.</p>
+</div>
+
+<div style="margin-bottom:20em;"></div>
