--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,86 @@
 // Place all the styles related to the Events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.events-list{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 5vh;
+}
+
+.event-list-item{
+    border: solid rgba(0,0,0,0.2) 1px;
+    color: black;
+    border-radius: 24px;
+    padding: 20px;
+    width: 500px;
+    margin-right: 32px;
+    margin-bottom: 32px;
+
+    &:hover{
+        cursor: pointer;
+        text-decoration: none;
+        color: #E54500;
+        border: solid #E54500 1px;
+        transition: .4s;
+
+    }
+}
+
+
+.event-header{
+    height: 40vh;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    flex-direction: row;
+    background-color: rgba(0,0,0, 0.05);
+    padding-left: 8vw;
+}
+
+.event-title{
+    margin: 0;
+}
+
+.event-header-content{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.calendar-icon-container{
+    background-color: white;
+    width: 90px;
+    height: 90px;
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    margin-right: 24px;
+    margin-top: -20px;
+}
+
+.calendar-icon{
+    width: 50px;
+}
+
+.event-section{
+    margin-bottom: 50px;
+
+    h2{
+        margin-bottom: 0.5em;
+        width: 100%;
+    }
+}
+
+
+
+.form-control{
+    display: flex;
+    flex-direction: row;
+}
