--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,35 +1,22 @@
+<div class="container">
+
 <p id="notice"><%= notice %></p>
 
-<h1>Events</h1>
+<h1>Browse Events</h1>
+<div class="events-list">
+<%if @events.length==0%>
+  <p class="center">No events added yet. Create one for others to see!</p>
+<% end%>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Start time</th>
-      <th>End time</th>
-      <th>Visibility</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @events.each do |event| %>
-      <tr>
-        <td><%= event.name %></td>
-        <td><%= event.description %></td>
-        <td><%= event.start_time %></td>
-        <td><%= event.end_time %></td>
-        <td><%= event.visibility %></td>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <% @events.each do |event|%>
+    <%= render 'event_list_item', :locals => {event: event} %>
+  <% end%>
+</div>
 
 <br>
 
-<%= link_to 'New Event', new_event_path %>
+<div class="center">
+<%= link_to '➕Add New Event', new_event_path%>
+</div>
+
+</div>
