--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -26,10 +26,14 @@
 
 .hero-buttons{
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    flex-direction: row;
+    justify-content: space-around;
     align-items:center;
-    height: 20vh;
+    height: 10vh;
+
+    .cta{
+        margin: 10px;
+    }
 }
 
 .orange{
@@ -45,6 +49,7 @@
     border-color: #E54500;
     border-style: solid;
     background-color: white;
+    box-sizing: border-box;
 
 
     &:hover{
@@ -60,25 +65,30 @@
     background-color: #E54500;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
     border-bottom: none;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
+    width: 100vw;
+    padding-left: 10vw;
+    padding-right: 10vw;
 
     .my-nav li a{
         color: white;
         font-size: 1.1em;
+        padding: auto 10px;
 
         &:hover{
-            text-decoration: underline;
+            color:#E54500;
+            background-color: white;
             transition: .4s;
         }
     }
 }
 
 #logo{
-    float: left;
     width: 80px;
     margin-top: 1em;
 }
@@ -88,4 +98,10 @@
     padding-top: 2em;
     border-top: solid 1px rgba(0, 0, 0, 0.1);
     margin-bottom: 5em;
+}
+
+@media all and (max-width:768px){
+   .my-navbar {
+       flex-direction: column;
+   }
 }
