--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,13 +1,12 @@
- <header class="navbar navbar-fixed-top navbar-inverse my-navbar">
-     <div class="container">
-         <%= link_to image_tag("evently_logo.svg", :id => "logo"), root_path%>
-         <nav>
-             <ul class="nav navbar-nav navbar-right my-nav">
-                 <li><%= link_to "Home", root_path %></li>
-                 <li><%= link_to "Dynamic", dynamic_path %></li>
-                 <li><%= link_to "Help", help_path %></li>
-                 <li><%= link_to "Log in", '#' %></li>
-             </ul>
-         </nav>
-     </div>
+ <header class="navbar-fixed-top navbar-inverse my-navbar">
+    <%= link_to image_tag("evently_logo.svg", :id => "logo"), root_path%>
+    <nav>
+        <ul class="nav navbar-nav navbar-right my-nav">
+            <li><%= link_to "Home", root_path %></li>
+            <li><%= link_to "Events", events_path %></li>
+            <li><%= link_to "Dynamic", dynamic_path %></li>
+            <li><%= link_to "Help", help_path %></li>
+            <li><%= link_to "Log in", '#' %></li>
+        </ul>
+    </nav>
  </header>
