Refactor container div wrapper

--- a/app/views/static_pages/dynamic.html.erb
+++ b/app/views/static_pages/dynamic.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <% provide(:title, "Random Verse")%>
 <h1 >Bible Verse Generator</h1>
 <div class="divider"></div>
@@ -8,3 +9,4 @@
     <h3 class="location"><%= random_verse[:location]%></h3>
 </div>
 <div class="divider"></div>
+</div>
