--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <% provide(:title, "Help") %>
 <h1>Help</h1>
 <p>
@@ -6,3 +7,4 @@
     To get help on this sample app, see the
     <a href="https://www.railstutorial.org/book">Ruby on Rails Tutorial bood</a>.
 </p>
+</div>
