--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, 'Sign Up') %>
+
+<div class="container">
 <h1>Sign up</h1>
 
 <div class="row">
@@ -21,4 +23,5 @@
         <%= f.submit "Create my account", class: "cta" %>
         <% end %>
     </div>
+</div>
 </div>
