--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Event</h1>
+<div class='container'>
+<%= link_to 'Back', events_path %>
+
+<h1>Create New Event</h1>
+
 
 <%= render 'form', event: @event %>
 
-<%= link_to 'Back', events_path %>
+</div>
+
