--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,16 +15,18 @@
 
 <body>
     <%= render 'layouts/navbar' %>
-    <div class="container">
+    <div>
         <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
         <% end %>
         <div class="site-wrapper">
             <%= yield %>
         </div>
-        <%= render 'layouts/footer' %>
-        <%= debug(params) if Rails.env.development? %>
     </div>
+    <%= render 'layouts/footer' %>
+    <%= debug(params) if Rails.env.development? %>
+
+
 </body>
 
 </html>
