--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <% provide(:title, "About") %>
 <h1>About</h1>
 <p>
@@ -11,3 +13,4 @@
     <a href="https://rubyonrails.org/">Ruby on Rails</a>.
     This is the sample app for the tutorial.
 </p>
+</div>
