--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, @user.name) %>
+<div class="container">
 <div class="row">
     <aside class="col-md-4">
         <section class="user_info">
@@ -9,4 +10,6 @@
             <p style="text-align: center"> Joined at <%=@user.created_at%></p>
         </section>
     </aside>
+</div>
+
 </div>
