--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="container footer">
     <small>
         The <%= link_to  "Evently App", root_path %>
         by a CSC 324 student.
@@ -7,6 +7,7 @@
         <ul>
             <li><%= link_to "About",   about_path %></li>
             <li><%= link_to "Contact", contact_path %></li>
+            <li><%= link_to "Help", help_path %></li>
             <li><a href="https://news.railstutorial.org/">News</a></li>
         </ul>
     </nav>
