--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -14,7 +14,6 @@ $gray-medium-light: #eaeaea;
 /* universal */
 
 body {
-  padding-top: 60px;
   font-family: 'Nunito-Regular';
   height: 100%;
   width: 100%;
@@ -24,6 +23,10 @@ body {
 
 .site-wrapper{
   min-height: 80vh;
+}
+
+div.container{
+  padding-top: 60px;
 }
 
 section {
