Add alt tags for all existing images

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,7 +5,7 @@
 <div class="event-header-content">
 
 
- <div class="calendar-icon-container"> <%= image_tag  "calendar.svg", class: 'calendar-icon' %> </div>
+ <div class="calendar-icon-container"> <%= image_tag  "calendar.svg", class: 'calendar-icon', alt: 'default-event-icon' %> </div>
   
   <span>
     <h1 class="event-title">
