--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
 <div class="center hero-section">
-    <%= image_tag  "evently_white_black.svg", :class => "hero-img"%>
+    <%= image_tag  "evently_white_black.svg", :class => "hero-img", alt: 'hero-image'%>
     <h2 class="tagline"> Create, Invite, Discover </h2>
 
     <div class="hero-buttons">
