--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
  <header class="navbar-fixed-top navbar-inverse my-navbar">
-    <%= link_to image_tag("evently_logo.svg", :id => "logo"), root_path%>
+    <%= link_to image_tag("evently_logo.svg", :id => "logo", alt: 'evently-logo'), root_path%>
     <nav>
         <ul class="nav navbar-nav navbar-right my-nav">
             <li><%= link_to "Home", root_path %></li>
