--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -16,6 +16,21 @@
     text-align: center;
 }
 
+.radio-btn{
+    width: auto;
+    color: black;
+    font-size: 1em;
+    background-color: #E54500;
+}
+
+.radio-btn-group{
+    display: flex;
+    flex-direction: column;
+    margin-left:1em;
+    margin-top: 1em;
+    justify-content: space-evenly;
+}
+
 .event-list-item{
     border: solid rgba(0,0,0,0.2) 1px;
     color: black;
