--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,30 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.users-list{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 5vh;
+    justify-content: center;
+}
+
+.user-card{
+    border: solid rgba(0,0,0,0.2) 1px;
+    color: black;
+    border-radius: 24px;
+    padding: 20px;
+    width: 376px;
+    margin-right: 32px;
+    margin-bottom: 32px;
+
+    &:hover{
+        cursor: pointer;
+        text-decoration: none;
+        color: #E54500;
+        border: solid #E54500 1px;
+        transition: .4s;
+    }
+}
