--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,11 +1,12 @@
  <header class="navbar-fixed-top navbar-inverse my-navbar">
-    <%= link_to image_tag("evently_logo.svg", :id => "logo", alt: 'evently-logo'), root_path%>
-    <nav>
-        <ul class="nav navbar-nav navbar-right my-nav">
-            <li><%= link_to "Home", root_path %></li>
-            <li><%= link_to "Events", events_path %></li>
-            <li><%= link_to "Dynamic", dynamic_path %></li>
-            <li><%= link_to "Help", help_path %></li>
-        </ul>
-    </nav>
+     <%= link_to image_tag("evently_logo.svg", :id => "logo", alt: 'evently-logo'), root_path%>
+     <nav>
+         <ul class="nav navbar-nav navbar-right my-nav">
+             <li><%= link_to "Home", root_path %></li>
+             <li><%= link_to "Events", events_path %></li>
+             <li><%= link_to "Community", users_path %></li>
+             <li><%= link_to "Dynamic", dynamic_path %></li>
+             <li><%= link_to "Help", help_path %></li>
+         </ul>
+     </nav>
  </header>
