--- a/app/views/events/_browse_instructions.html.erb
+++ b/app/views/events/_browse_instructions.html.erb
@@ -1,6 +1,6 @@
 <div style= "display:flex; flex:1; flex-direction:row; justify-content: center; margin: 2em 0">
     <ol style="line-height: 1.7; font-size:1.1em; max-width:80vw">
-        <li> View the entire colleciton of events on the Evently platform. Meet new people, discover a new passion, learn a new skill from any of the wonderful events being organized by other community members.</li>
+        <li> Browse the entire colleciton of events on the Evently platform. Meet new people, discover a new passion, learn a new skill from any of the wonderful events being organized by other community members.</li>
         <li> See an event you might be interested in, click on it to find out more from the event page!</li>
         <li> From there, you will find event details such as the time of the event, location, and more. Copy these details to your personal calendar and hang tight!</li>
     </ol>
