--- a/app/views/events/_create_instructions.html.erb
+++ b/app/views/events/_create_instructions.html.erb
@@ -1,9 +1,9 @@
 <div style= "display:flex; flex:1; flex-direction:row; justify-content: center; margin: 2em 0">
     <ol style="line-height: 1.7; font-size:1.1em">
-        <li>Please fill out the form below to add your event to the platform 📆.</li>
-        <li>When done, click the Create Event button to submit your event 🙌.</li>
-        <li>If any errors occur, you will be prompted to fix them 😫.</li>
-        <li>Otherwise, you will be directed to the new page for your event! 🎉</li>
+        <li>Please fill out the form below to add your event to the platform 📆. Kindly sign up first if you haven't and use the same email you signed up with🔐.</li>
+        <li>After filling the form, click the Create Event button to submit your event 🙌.</li>
+        <li>If any errors occur, you will be prompted to fix them 😸.</li>
+        <li>Otherwise, you will be directed to the new page for your event 🎉! </li>
         <li>Share the event url to potential patrons to increase awareness for your event. 🗣</li>
     </ol>
 </div>
