--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,6 +2,34 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+.gravatar {
+    width: 80px;
+    border-radius: 50%;
+    float: left;
+    margin-right: 10px;
+  }
+  
+  .gravatar_edit {
+    margin-top: 15px;
+  }
+
+.user-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-left: 1em;
+}
+
+.user-header{
+    display:flex; 
+    justify-content:flex-start; 
+    align-items:flex-start;
+    margin: 2em 0;
+    padding-bottom: 24px;
+    border-bottom: solid 1px rgba(0,0,0,0.2)
+}
+
 .users-list{
     display: flex;
     flex-direction: row;
