--- a/app/views/events/_event_list_item.html.erb
+++ b/app/views/events/_event_list_item.html.erb
@@ -1,8 +1,8 @@
 <%= link_to event_path(locals[:event]), class: "event-list-item" do %>
-        <h3> <%= locals[:event].name%> </h3>
-        <p class="light-text"><%=locals[:event].description%></p>
-        <p>Starts <%=locals[:event].start_time%></p>
-        <p>Ends <%=locals[:event].end_time%></p>
-        <p>Hosted by <%=locals[:event].user.name%></p>
+<h3> <%= locals[:event].name%> </h3>
+<p class="light-text"><%=locals[:event].description%></p>
+<p><b>Location</b>: <%=locals[:event].location || 'None'%></p>
+<p><b>Starts</b>: <%=locals[:event].start_time%></p>
+<p><b>Ends</b>: <%=locals[:event].end_time%></p>
+<p>Hosted by <b><%=locals[:event].user.name%></b></p>
 <% end %>
-
