--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,6 +5,7 @@
              <li><%= link_to "Home", root_path %></li>
              <li><%= link_to "Events", events_path %></li>
              <li><%= link_to "Community", users_path %></li>
+             <li><%= link_to "Sign Up", new_user_path %></li>
              <li><%= link_to "Dynamic", dynamic_path %></li>
              <li><%= link_to "Help", help_path %></li>
          </ul>
