Add location to show page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -31,6 +31,10 @@
   <p> <%= @event.description %> </p>
 </div>
 
+<div class="event-section">
+  <h2>Location</h2>
+  <p> <%= @event.location %> </p>
+</div>
 
 <div class="event-section">
   <h2>Start Time</h2>
