Make static pages more legit

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,16 +1,21 @@
 <div class="container">
 
-<% provide(:title, "About") %>
-<h1>About</h1>
-<p>
-    The <a href="https://www.railstutorial.org/"><em>Ruby on Rails
-            Tutorial</em></a>, part of the
-    <a href="https://www.learnenough.com/">Learn Enough</a> family of
-    tutorials, is a
-    <a href="https://www.railstutorial.org/book">book</a> and
-    <a href="https://screencasts.railstutorial.org/">screencast series</a>
-    to teach web development with
-    <a href="https://rubyonrails.org/">Ruby on Rails</a>.
-    This is the sample app for the tutorial.
-</p>
+    <% provide(:title, "About") %>
+    <h1>About</h1>
+    <p>
+        <a href="/"><em>Evently</em></a> is a website where individuals can create and share events with a large community.
+        Evently aims to help increase visibility for amazing events taking place in various communities. Stay tuned!
+
+        <br />
+        <br />
+
+        The Evently app was created
+        with inspiration from the <a href="https://www.railstutorial.org/"><em>Ruby on Rails
+                Tutorial</em></a>, part of the Learn Enough</a> family of
+        tutorials, is a
+        <a href="https://www.railstutorial.org/book">book</a> and
+        <a href="https://screencasts.railstutorial.org/">screencast series</a>
+        to teach web development with
+        <a href="https://rubyonrails.org/">Ruby on Rails</a>.
+    </p>
 </div>
