--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,8 +1,7 @@
 <div class="container">
 <% provide(:title, "Contact")%>
 <h1>Contact</h1>
-<p>
-    Contact the Ruby on Rails Tutorial about the sample app at the
-    <a href="https://ww.railstutorial.org/contact">contact page</a>
+<p style="text-align:center">
+    Contact the Evently team by email at <a href="mailto:name@email.com">team@evently.com</a> (if it existed😆!)
 </p>
 </div>
