--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,8 +2,8 @@
 
 <div class="container">
 <h1>Sign up</h1>
-
-<div class="row">
+<p style="text-align:center">Fill the form below to create your Evently account and create events!</p>
+<div style="margin-top:2em" class="row">
     <div class="col-md-6 col-md-offset-3">
         <%= form_with(model: @user, local: true) do |f| %>
         <%= render 'shared/error_messages' %>
