--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -19,6 +19,11 @@
         </div>
 
         <div class="field">
+            <%= form.label "Your Password" %>
+            <%= form.password_field :password,  class: "form-control"%>
+        </div>
+
+        <div class="field">
             <%= form.label "Event Name" %>
             <%= form.text_field :name,  class: "form-control"%>
         </div>
