Add a back link to user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, @user.name) %>
 <div class="container">
+    <%= link_to 'Back', users_path %>
     <div class="row user-header">
         <%= gravatar_for @user %>
         <section class="user-info">
