Add None specified for no location

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -33,7 +33,7 @@
 
 <div class="event-section">
   <h2>Location</h2>
-  <p> <%= @event.location %> </p>
+  <p> <%= @event.location || 'None specified.' %> </p>
 </div>
 
 <div class="event-section">
