Reduce transition time for hover

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -51,7 +51,7 @@
         text-decoration: none;
         color: #E54500;
         border: solid #E54500 1px;
-        transition: .4s;
+        transition: .1s;
 
     }
 }
@@ -69,6 +69,7 @@
 
 .event-title{
     margin: 0;
+    text-align: left;
 }
 
 .event-header-content{
